2004-10-16  Roland Illig  <roland.illig@gmx.de>

	* file.c (do_file_error): Add const qualifier. (query_recursive):
	Likewise. (query_replace): Likewise.
	* view.c: Rename EOF_offset to INVALID_OFFSET, as it is mostly
	used to mark an invalid cache.

2004-10-13  Jindrich Novy  <jnovy@redhat.com>

	* util.c (strip_password): Add "/#sh:".

2004-10-12  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* myslang.h: Check USE_INCLUDED_SLANG properly.

2004-10-11  Roland Illig  <roland.illig@gmx.de>

	* utilunix.c (close_error_pipe): Fixed possible invalid memory access
	(three lines below).

2004-10-11  Leonard den Ottolander  <leonard * den ottolander nl>

	* file.c (copy_dir_dir): Small text fix.

2004-10-06  Alexander Savelyev  <i@fano.com.ua>

        * fileopctx.h (struct FileOpContext): Use off_t for offset.

2004-10-05  Miroslav Rudisin  <miero+gnu@atrey.karlin.mff.cuni.cz>

        * util.c(strip_password): Add support for '@' in username.

2004-10-05  Jakub Jelinek  <jakub@redhat.com>

	* cons.saver.c: Partly rewritten cons.saver.c.

2004-09-28  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* util.c (convert_controls): Fix possible buffer overflow
	for ".*^" strings.

2004-09-27  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* complete.c [__linux__ && !__USE_GNU]: Fix compilation on Red Hat 7.3
	* util.c (convert_controls): Fix compilation.

2004-09-26  Roland Illig  <roland.illig@gmx.de>

	* pipethrough.c: #include <string.h> to compile on Solaris.
	* util.h (convert_controls): Adjusted the comment to what the
	function really does.

2004-09-26  Mike Gorchak  <mike@malva.ua>

	* key.c (qansi_key_defines[]): Add support for qansi-m terminals.
	Needed on QNX Neutrino. (correct_key_code): Likewise.

2004-09-25  Roland Illig  <roland.illig@gmx.de>

	* pipethrough.c: Added pipethrough, a function to execute child
	processes in a simple way.
	* pipethrough.h: The interface for the function.
	* pipethrough.3: The manpage (will be installed in maintainer-mode).