@@ -1,3 +1,7 @@
+2004-10-17  Andrew V. Samoilov  <sav@bcs.zp.ua>
+
+	* hotlist.c (add_new_entry_cmd): Fix memory leaks.
+
 2004-10-16  Roland Illig  <roland.illig@gmx.de>
 
 	* file.c (do_file_error): Add const qualifier. (query_recursive):
